--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,32 @@
-torch>=2.1.0
-transformers>=4.40.0
+# Core ML
+torch>=2.0.0
+transformers>=4.35.0
+accelerate>=0.24.0
 peft>=0.6.0
-datasets>=2.15.0
-accelerate
 bitsandbytes>=0.41.0
-numpy>=1.27.0
-tqdm>=4.66.0
 
-# 추가
-sentencepiece
-protobuf
+# Data Processing
+datasets>=2.14.0
+numpy>=1.24.0,<2.0.0
+pandas>=2.0.0
+
+# Model & Tokenizer
+sentencepiece>=0.1.99
+protobuf>=3.20.0
 safetensors
+huggingface-hub>=0.19.0
+
+# Utilities
+tqdm>=4.65.0
 psutil
 colorama
 
-#(시각화/로그)
+# Visualization & Logging
+matplotlib>=3.7.0
+seaborn>=0.12.0
 wandb
 pyyaml
+
+# Evaluation 
+evaluate>=0.4.0
+rouge-score>=0.1.2
